Sat Oct 23 15:17:55 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenutoolbutton.c (button_state_changed_cb): Remove check
	for previous state being ACTIVE. Bug 153876.

2004-10-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_drag_data_received) 
	(gtk_file_chooser_button_init): Use the new file DND api.

	* gtk/gtkdnd.h:
	* gtk/gtkdnd.c (gtk_drag_dest_add_uri_targets) 
	(gtk_drag_source_add_uri_targets): 

	* gtk/gtkselection.h:
	* gtk/gtkselection.c (gtk_target_list_add_uri_targets):
	(gtk_selection_data_set_uris):  
	(gtk_selection_data_get_uris): New functions to allow
	handling file DND "without knowing jack shit".

	* configure.in: Bump glib requirement to 2.5.4.

	* gtk/gtkfilechooserdefault.c (shortcuts_drop_uris): Use
	g_uri_list_extract_uris().

Fri Oct 22 13:25:25 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextbuffer.c (gtk_text_buffer_backspace): Fix 
	backspacing on the empty last line of a buffer 
	(https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=136840,
	Dan Williams)

2004-10-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdnd.c: Document how to use info with text/image 
	targets.

	* gtk/gtkselection.h: 
	* gtk/gtkselection.c (gtk_target_list_add_text_targets): 
	(gtk_target_list_add_image_targets): Add info argument.
	
	* gtk/gtkcalendar.c (gtk_calendar_motion_notify): 
	* gtk/gtkentry.c (gtk_entry_init): 
	* gtk/gtktextview.c (gtk_text_view_init): Adjust all callers.

2004-10-22  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtktexttag.c: (gtk_text_tag_get_property):
	GdkBitmap is a GObject, not a boxed type.
	
Thu Oct 21 15:01:09 2004  Owen Taylor  <otaylor@redhat.com>

	#155952

	* gtk/gtkentry.c: Fix checking the wrong position for
	the backspace_deletes_character PangoLogAttr.

	* gtk/gtktextbuffer.[ch] gtk/gtk.symbols (gtk_text_buffer_backspace): 
	Move backspace logic from GtkTextView to here, check 
	backspace_deletes_char.	
